--- a/pages/precios.html
+++ b/pages/precios.html
@@ -19,14 +19,14 @@
                 <il><a href="./index.html" class="fa-solid fa-trophy"> Inicio</a></il>
                <il><a target="_blank" href="./torneos.html" class="fa-solid fa-trophy">  Torneos</a></il>
                <il><a target="_blank" href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-               <il><a target="_blank" href="./precios.html" class="fa-solid fa-sack-dollar">  Costos</a></il>
+               <il><a target="_blank" href="./precios.html" class="fa-solid fa-sack-dollar">  Precios</a></il>
                <il><a target="_blank" href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
            </ul>
         </nav>
     </header>
 <main>
     <section>
-        <h1 class="titulo"> Precios </h1>
+        <h1 class="titulo"> Costos </h1>
         <p class="intro"> ¡Los mejores precios para las mejores canchas! 
             Revisá en estas tablas nuestros costos semanales en Canchas de 5 y Canchas de 8 en pasto sintético. </p>
     </section>
