--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -19,7 +19,7 @@
                 <il><a href="./index.html" class="fa-solid fa-trophy"> Inicio</a></il>
                <il><a href="./torneos.html" class="fa-solid fa-trophy">  Torneos</a></il>
                <il><a href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-               <il><a href="./precios.html" class="fa-solid fa-sack-dollar">  Costos</a></il>
+               <il><a href="./precios.html" class="fa-solid fa-sack-dollar">  Precios</a></il>
                <il><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
            </ul>
         </nav>
