--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -20,7 +20,7 @@
                 <il><a href="./index.html" class="fa-solid fa-trophy"> Inicio</a></il>
                <il><a target="_blank" href="./torneos.html" class="fa-solid fa-trophy">  Torneos</a></il>
                <il><a target="_blank" href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-               <il><a target="_blank" href="./precios.html" class="fa-solid fa-sack-dollar">  Costos</a></il>
+               <il><a target="_blank" href="./precios.html" class="fa-solid fa-sack-dollar">  Precios</a></il>
                <il><a target="_blank" href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
            </ul>
         </nav>
