--- a/pages/index.html
+++ b/pages/index.html
@@ -19,14 +19,14 @@
 <body>
 
     <header>
-        <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
+        <h1 class="titulo"> FieldFut </h1>
         <nav class="barra-navegacion"> 
             <ul>
-                <il><a href="./index.html" class="fa-solid fa-trophy"> Inicio</a></il>
-                <il><a href="./torneos.html" class="fa-solid fa-trophy">  Torneos</a></il>
-                <il><a href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-                <il><a href="./precios.html" class="fa-solid fa-sack-dollar"> Precios</a></il>
-                <il><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
+                <il><a href="./index.html"> Inicio</a></il>
+                <il><a href="./torneos.html">  Torneos</a></il>
+                <il><a href="./multimedia.html">  Galería</a></il>
+                <il><a href="./precios.html"> Precios</a></il>
+                <il><a href="./formulario.html">  Ser Parte</a></il>
             </ul>
 
         </nav>
@@ -42,7 +42,7 @@
                     <div class="card-deck">
                         <div class="col-lg-3">
                             <div class="card tarjeta">
-                                <img src="https://images.unsplash.com/photo-1602432141202-e8b683524997?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Imagen de ejemplo">
+                                <img src="https://images.unsplash.com/photo-1570277756464-146a053f8a0c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTN8fGNhbmNoYSUyMGRlJTIwZnV0Ym9sfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Imagen de ejemplo">
                                 <div class="card-body">
                                     <h5 class="card-title">Cancha Número 1</h5>
                                     <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, nihil repudiandae reiciendis consequuntur itaque, eaque dicta repellendus accusamus beatae ex quasi aliquam minus aut quidem harum? Voluptate assumenda corporis nihil!.</p>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="card tarjeta">
-                                <img src="https://images.unsplash.com/photo-1532890198585-20730fc10d27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Imagen de ejemplo">
+                                <img src="https://images.unsplash.com/photo-1621929209157-b69c5183d01e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDh8fGNhbmNoYSUyMGRlJTIwZnV0Ym9sfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Imagen de ejemplo">
                                 <div class="card-body">
                                     <h5 class="card-title">Cancha Número 3</h5>
                                     <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, nihil repudiandae reiciendis consequuntur itaque, eaque dicta repellendus accusamus beatae ex quasi aliquam minus aut quidem harum? Voluptate assumenda corporis nihil!.</p>
@@ -92,18 +92,12 @@
 
     </main>    
         <footer>
-            <div class="footer-p">
-            <p>¡Contactanos!</p>
-            </div>
-                <div class="items-footer">
-                    <a href="https://www.instagram.com/" target="_blank">instagram</a> 
-                    <a href="https://www.facebook.com/"  target="_blank">facebook</a>
-                    <a href="https://www.twitter.com/"   target="_blank">twitter</a>
-                    <a href="https://www.pinterest.com/" target="_blank">pinterest</a>
-                </div>
-            <div class="copyright">
-                <p> Copyright 2023 - FieldFut </p>
-            </div>    
+                <p class="footer-p">¡Contactanos!</p>
+                    <a class="footer-a instragram" href="https://www.instagram.com/" target="_blank">instagram</a> 
+                    <a class="footer-a facebook" href="https://www.facebook.com/"  target="_blank">facebook</a>
+                    <a class="footer-a twitter" href="https://www.twitter.com/"   target="_blank">twitter</a>
+                    <a class="footer-a pinterest" href="https://www.pinterest.com/" target="_blank">pinterest</a>
+                <p class="Copyright"> Copyright 2023 - FieldFut </p>
         </footer> 
 </body>
 </html>
