--- a/pages/precios.html
+++ b/pages/precios.html
@@ -16,11 +16,11 @@
         <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
         <nav class="barra-navegacion"> 
            <ul>
-                <il><a href="./index.html" class="fa-solid fa-trophy"> Inicio</a></il>
-               <il><a target="_blank" href="./torneos.html" class="fa-solid fa-trophy">  Torneos</a></il>
-               <il><a target="_blank" href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-               <il><a target="_blank" href="./precios.html" class="fa-solid fa-sack-dollar">  Precios</a></il>
-               <il><a target="_blank" href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
+                <il><a href="./index.html"> Inicio</a></il>
+               <il><a href="./torneos.html">  Torneos</a></il>
+               <il><a href="./multimedia.html">  Galería</a></il>
+               <il><a href="./precios.html">  Precios</a></il>
+               <il><a href="./formulario.html">  Ser Parte</a></il>
            </ul>
         </nav>
     </header>
