--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -13,14 +13,14 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
+        <h1 class="titulo"> FieldFut </h1>
         <nav class="barra-navegacion"> 
            <ul>
-                <il><a href="./index.html" class="fa-solid fa-trophy"> Inicio</a></il>
-               <il><a href="./torneos.html" class="fa-solid fa-trophy">  Torneos</a></il>
-               <il><a href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-               <il><a href="./precios.html" class="fa-solid fa-sack-dollar">  Precios</a></il>
-               <il><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
+                <il><a href="./index.html"> Inicio</a></il>
+               <il><a href="./torneos.html">  Torneos</a></il>
+               <il><a href="./multimedia.html">  Galería</a></il>
+               <il><a href="./precios.html">  Precios</a></il>
+               <il><a href="./formulario.html">  Ser Parte</a></il>
            </ul>
         </nav>
     </header>
