--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="Bienvenido a la Pagina Oficial de FieldFut en donde 
+    vas a poder alquilar nuestras canchas, anotarte a nuestros torneos, ver imagenes del mismo,
+    comprar la mejor indumentaria de nuestra marca y más!">
+    <meta name="keywords" content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title> FieldFut - HomePage</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <title> inicio - FieldFut</title>
 </head>
 
 <body>
@@ -18,8 +23,10 @@
          <nav class="barra-navegacion"> 
             <ul>
                 <li><a href="./index.html" class="fa-solid fa-futbol"> Inicio </a></li>
-                <il><a href="./pages/multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-                <il><a href="./pages/formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
+                <li><a href="./pages/multimedia.html" class="fa-solid fa-camera">  Galería</a></li>
+                <li><a href="./pages/formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></li>
+                <li><a href="./pages/torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
+                <li><a href="./pages/productos.html" class="fa-solid fa-shirt"> Productos</a></li>
             </ul>
 
          </nav>
@@ -32,7 +39,7 @@
             <h1 class="fw-light">¡Bienvenido a la página oficial de FieldFut! </h1>
             <p class="lead text-muted">Reservá las mejores canchas de futbol de pasto sintético de Buenos Aires acá!</p>
             <p>
-              <a href="./formulario.html" class="btn btn-primary my-2">Reservar</a>
+              <a href="./pages/formulario.html" class="btn btn-primary my-2">Reservar</a>
             </p>
           </div>
         </div>
