--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title> Galería - FieldFut </title>
 </head>
 <body>
     <header>
         <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
         <nav class="barra-navegacion"> 
-           <ul>
+           <ul class="menu-nav">
                 <li><a href="../index.html" class="fa-solid fa-futbol"> Inicio </a></li>
-               <il><a href=./multimedia.html" class="fa-solid fa-camera">  Galería</a></il>
-               <il><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></il>
+               <li><a href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></li>
+               <li><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></li>
+               <li><a href="./pages/torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
+                <li><a href="./pages/productos.html" class="fa-solid fa-shirt"> Productos</a></li>
            </ul>
          </nav>
      </header>
@@ -47,7 +50,7 @@
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('https://media.istockphoto.com/id/1088788804/es/foto/asia-adultos-j%C3%B3venes-jugando-f%C3%BAtbol.jpg?s=612x612&w=0&k=20&c=vM_vjldkskXq2JtMJRVNQub16RDr2MKvhKfRsY_Utz0=');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Para principiantes como para profesionales</h3>
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Para todas las edades</h3>
                     </div>
                 </div>
             </div>
