--- a/pages/productos.html
+++ b/pages/productos.html
@@ -27,10 +27,61 @@
      </header> 
      <main> 
         <head>
-            <h1> Productos </h1>
-            <p>Entrá y fijate los mejores productos de la linea de indumentaria deportiva de nuestra marca. <br> ¡Siempre la mejor calidad al mejor precio!</p>
+            <h1 class="t-prod"> Productos </h1>
+            <p class="t-prod">Entrá y fijate los mejores productos de la linea de indumentaria deportiva de nuestra marca. <br> ¡Siempre la mejor calidad al mejor precio!</p>
         </head>
+        
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="2" class="active" aria-current="true"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item">
+              <img src="../images/conjunto1.jpg" class="bd-placeholder-img" width="10%" height="1%"><rect width="100%" height="100%" fill="#777"></rect></img>
+              <div class="container">
+                <div class="carousel-caption text-start">
+                  <h1>Conjunto Deportivo N1</h1>
+                  <p></p>
+                  <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <img class="bd-placeholder-img" width="10%" height="10%" src="../images/conjunto2.jpg"><rect width="100%" height="100%" fill="#777"></rect></img>
+              <div class="container">
+                <div class="carousel-caption">
+                  <h1>Conjunto deportivo N2</h1>
+                  <p></p>
+                  <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="bd-placeholder-img" width="10%" height="10%" src="../images/conjunto3.jpg"><rect width="100%" height="100%" fill="#777"></rect></img>
+              <div class="container">
+                <div class="carousel-caption text-end">
+                  <h1>Conjunto Deportivo N3</h1>
+                  <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+
+          <br>
+
         <section>
+
           <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
@@ -67,58 +118,18 @@
           </div>
           
         </section> 
-
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="1"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="2" class="active" aria-current="true"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item">
-              <img src="https://ferreira.vtexassets.com/arquivos/ids/339473-800-auto?v=637208345702970000&width=800&height=auto&aspect=true" class="bd-placeholder-img" width="10%" height="1%"><rect width="100%" height="100%" fill="#777"></rect></img>
-              <div class="container">
-                <div class="carousel-caption text-start">
-                  <h1>Pantalon corto 1</h1>
-                  <p>Primer estilo de short deportivo</p>
-                  <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item active">
-              <img class="bd-placeholder-img" width="10%" height="10%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDKjiSZotX89TV_B0JefJx8fzCgahNW3QihUklxPZwX1s8tpEN08XjkpUnknA08cDSEu4&usqp=CAU"><rect width="100%" height="100%" fill="#777"></rect></img>
-              <div class="container">
-                <div class="carousel-caption">
-                  <h1>Pantalon corto 2</h1>
-                  <p>segundo estilo de short de futbol</p>
-                  <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="bd-placeholder-img" width="10%" height="10%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYuOn1lSEKLOi0NsL8S4zjzZ9WJDa-0OmSP4SBi7Yoc7Byfa9WiiNTyIC0aQ5nwNulb_o&usqp=CAU"><rect width="100%" height="100%" fill="#777"></rect></img>
-              <div class="container">
-                <div class="carousel-caption text-end">
-                  <h1>Pantalon corto 3.</h1>
-                  <p>Tercer estilo de short de futbol.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Siguiente</span>
-          </button>
-        </div>
-
      </main>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/73f026269c.js" crossorigin="anonymous"></script>
+     <script src="https://kit.fontawesome.com/73f026269c.js" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <p>¡Contactanos!</p>
+      <div class="items-footer">
+           <a href="instagram.com/" class="fa-brands fa-instagram" target="_blank"></a> 
+           <a href="facebook.com/" class="fa-brands fa-facebook-f" target="_blank"></a>
+           <a href="twitter.com/" class="fa-brands fa-twitter" target="_blank"></a>
+           <a href="pinterest.com/" class="fa-brands fa-pinterest" target="_blank"></a>
+      </div>
+</footer> 
 
 </html>
