--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="Bienvenido a la Pagina Oficial de FieldFut en donde 
+    vas a poder alquilar nuestras canchas, anotarte a nuestros torneos, ver imagenes del mismo,
+    comprar la mejor indumentaria de nuestra marca y más!">
+    <meta name="keywords" content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <title> Reservá - FieldFut</title>
+    <title> Ser Parte - FieldFut</title>
 </head>
 
 <body>
@@ -92,7 +94,7 @@
                             <label for="firstName" class="form-label">Nombre</label>
                             <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
                             <div class="invalid-feedback">
-                                Valid first name is required.
+                                Se requiere tu nombre.
                             </div>
                         </div>
 
@@ -100,24 +102,23 @@
                             <label for="lastName" class="form-label">Apellido</label>
                             <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
                             <div class="invalid-feedback">
-                                Valid last name is required.
+                                Se requiere tu apellido.
                             </div>
                         </div>
 
                         <div class="col-12">
                             <label for="email" class="form-label">Telefono</label>
-                            <input type="email" class="form-control" id="email" placeholder="+54118888888">
+                            <input type="email" class="form-control" id="email" placeholder="+541100000000">
                             <div class="invalid-feedback">
-                                Please enter a valid phone.
+                                Ingresar un número válido.
                             </div>
                         </div>
 
                         <div class="col-12">
-                            <label for="email" class="form-label">Email <span
-                                    class="text-muted">(Optional)</span></label>
-                            <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                            <label for="email" class="form-label">Email <span class="text-muted"> (Optional)</span> </label>
+                            <input type="email" class="form-control" id="email" placeholder="tudireccion@mail.com">
                             <div class="invalid-feedback">
-                                Please enter a valid email address for shipping updates.
+                                Por favor ingreasr un mail válido.
                             </div>
                         </div>
 
@@ -125,7 +126,7 @@
                             <label for="cancha" class="form-label">Cancha</label>
                             <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
                             <div class="invalid-feedback">
-                                Valid field is required.
+                                No es válido.
                             </div>
                         </div>
 
@@ -133,13 +134,15 @@
                             <label for="Ubicacion" class="form-label">Ubicacion</label>
                             <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
                             <div class="invalid-feedback">
-                                Valid ubication is required.
+                                No es válido.
                             </div>
                         </div>
                     </div>
 
+                    <button class="btn btn-primary" type="submit">Reservar un lugar</button>
+            
                     <section>
-                        <h1 class="titulo"> Precios </h1>
+                        <h1 class="titulo-precios"> Precios </h1>
                         <p class="intro"> ¡Los mejores precios para las mejores canchas!
                             Revisá en estas tablas nuestros costos semanales en Canchas de 5 y Canchas de 8 en pasto
                             sintético. </p>
@@ -230,10 +233,8 @@
                         </table>
 
                     </div>
-                    <button class="btn btn-primary" type="submit">Reservar un lugar</button>
 
-
-    </main>
+                </main>
     <footer>
         <p>¡Contactanos!</p>
         <div class="items-footer">
