--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="Bienvenido a la Pagina Oficial de FieldFut en donde 
+    vas a poder alquilar nuestras canchas, anotarte a nuestros torneos, ver imagenes del mismo,
+    comprar la mejor indumentaria de nuestra marca y más!">
+    <meta name="keywords" content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <title> Torneos - FieldFut </title>
+    <title> Torneos - FieldFut</title>
 </head>
 <body>
     <header>
@@ -33,27 +37,27 @@
           </header>
           <div class="card-container">
             <div class="card">
-              <img src="https://images.unsplash.com/photo-1571080096581-53aefc318ac3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fHBhcnRpZG8lMjBkZSUyMGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="Imagen de la primera tarjeta">
+              <img src="https://images.unsplash.com/photo-1571080096581-53aefc318ac3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fHBhcnRpZG8lMjBkZSUyMGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="torneo-masculino-imagen">
               <div class="card-content">
                 <h2 class="card-title">TORNEO MASCULINO</h2>
                 <p class="card-text">Viernes y Domingos. Horarios a coordinar. Diversas categorías.</p>
-                <button class="card-button">Inscribite <a href="../pages/formulario.html"></a> </button>
+                <button class="card-button">Inscribite <a href="./formulario.html"></a> </button>
               </div>
             </div>
             <div class="card">
-              <img src="https://images.unsplash.com/photo-1532349206130-2daea437154d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Imagen de la segunda tarjeta">
+              <img src="https://images.unsplash.com/photo-1532349206130-2daea437154d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="torneo-femenino-imagen">
               <div class="card-content">
                 <h2 class="card-title">TORNEO FEMENINO</h2>
                 <p class="card-text">Jueves y Sábados. Horarios a coordinar. Diversas categorías.</p>
-                <button class="card-button">Inscribite <a href="../pages/formulario.html"></a> </button>
+                <button class="card-button">Inscribite <a href="./formulario.html"></a> </button>
               </div>
             </div>
             <div class="card">
-              <img src="https://images.unsplash.com/photo-1587329310686-91414b8e3cb7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80" alt="Imagen de la primera tarjeta">
+              <img src="https://images.unsplash.com/photo-1587329310686-91414b8e3cb7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80" alt="imagen-amistosos">
               <div class="card-content">
                 <h2 class="card-title">AMISTOSOS</h2>
                 <p class="card-text">Todos los días. Preguntar horarios. Todas las Edades.</p>
-                <button class="card-button"> <a href="../pages/formulario.html"></a> Reservá</button>
+                <button class="card-button"> <a href="./formulario.html"></a> Reservá</button>
               </div>
             </div>
           </div>
