--- a/index.html
+++ b/index.html
@@ -9,35 +9,34 @@
     vas a poder alquilar nuestras canchas, anotarte a nuestros torneos, ver imagenes del mismo,
     comprar la mejor indumentaria de nuestra marca y más!">
     <meta name="keywords" content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-    <title> inicio - FieldFut</title>
+    <title> Inicio - FieldFut</title>
 </head>
 
 <body>
-    <header>
-        <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
-         <nav class="barra-navegacion"> 
-            <ul>
-                <li><a href="./index.html" class="fa-solid fa-futbol"> Inicio </a></li>
-                <li><a href="./pages/multimedia.html" class="fa-solid fa-camera">  Galería</a></li>
-                <li><a href="./pages/formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></li>
-                <li><a href="./pages/torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
-                <li><a href="./pages/productos.html" class="fa-solid fa-shirt"> Productos</a></li>
-            </ul>
+  <header>
+    <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
+    <nav class="barra-navegacion"> 
+      <ul>
+        <li><a href="./index.html" class="fa-solid fa-futbol"> Inicio </a></li>
+        <li><a href="./pages/multimedia.html" class="fa-solid fa-camera">  Galería</a></li>
+        <li><a href="./pages/formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></li>
+        <li><a href="./pages/torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
+        <li><a href="./pages/productos.html" class="fa-solid fa-shirt"> Productos</a></li>
+      </ul>
 
-         </nav>
-    </header>
-<main>
-
-    <section class="py-5 text-center container">
+    </nav>
+  </header>
+  <main>  
+      <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">¡Bienvenido a la página oficial de FieldFut! </h1>
-            <p class="lead text-muted">Reservá las mejores canchas de futbol de pasto sintético de Buenos Aires acá!</p>
+            <p class="text-muted">Reservá las mejores canchas de futbol de pasto sintético de Buenos Aires acá!</p>
             <p>
               <a href="./pages/formulario.html" class="btn btn-primary my-2">Reservar</a>
             </p>
@@ -56,13 +55,13 @@
                         <li> -Mixto </li>
                         <li> -Apto para todas las edades </li> 
                         <img class="bd-placeholder-img card-img-top" width="100%" height="100%" src="https://media.istockphoto.com/id/106531096/es/foto/jugador-de-f%C3%BAtbol.jpg?s=612x612&w=0&k=20&c=5486ysm5r-cTIdls3ZMynyAVNIjB-ayNiC-6sUlc-mw="/>
-                    <p> Y además, podés inscribirte a nuestra escuelita de futbol <a target="_blank" class="a-tarjeta-torneos" href="./formulario.html">acá</a></p>
+                    <p> Y además, podés inscribirte a nuestra escuelita de futbol <a class="a-tarjeta-torneos" href="./formulario.html">acá</a></p>
                     </ul>
               </div>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1602432141202-e8b683524997?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"/>
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1602432141202-e8b683524997?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="cancha-n1"/>
                 <div class="card-body">
                   <p class="card-text">Cancha de pasto sintético al aire libre en la zona de Belgrano.</p>
                 </div>
@@ -70,7 +69,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1487466365202-1afdb86c764e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FuY2hhJTIwZGUlMjBmJUMzJUJBdGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"/>
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1487466365202-1afdb86c764e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FuY2hhJTIwZGUlMjBmJUMzJUJBdGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="cancha-n2"/>
                 <div class="card-body">
                   <p class="card-text">Cancha situada sobre el barrio de Vte. López techada y de caucho.</p>
                 </div>
@@ -78,7 +77,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1532890198585-20730fc10d27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"/>
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1532890198585-20730fc10d27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="cancha-n3"/>
                 <div class="card-body">
                   <p class="card-text">Zona Núñez, cancha de 11 dividida en sectores, con gradas y tribunas.</p>
                 </div>
@@ -87,17 +86,17 @@
           </div>
         </div>
       </div>
-</main>
-<footer>
+  </main>
+  <footer>
     <p>¡Contactanos!</p>
-        <div class="items-footer">
-             <a href="instagram.com/" class="fa-brands fa-instagram" target="_blank"></a> 
-             <a href="facebook.com/" class="fa-brands fa-facebook-f" target="_blank"></a>
-             <a href="twitter.com/" class="fa-brands fa-twitter" target="_blank"></a>
-             <a href="pinterest.com/" class="fa-brands fa-pinterest" target="_blank"></a>
-        </div>
-</footer> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/73f026269c.js" crossorigin="anonymous"></script>
+    <div class="items-footer">
+      <a href="instagram.com/" class="fa-brands fa-instagram" target="_blank"></a> 
+      <a href="facebook.com/" class="fa-brands fa-facebook-f" target="_blank"></a>
+      <a href="twitter.com/" class="fa-brands fa-twitter" target="_blank"></a>
+      <a href="pinterest.com/" class="fa-brands fa-pinterest" target="_blank"></a>
+    </div>
+  </footer> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/73f026269c.js" crossorigin="anonymous"></script>
 </body>
 </html>
