--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="Bienvenido a la Pagina Oficial de FieldFut en donde 
+    vas a poder alquilar nuestras canchas, anotarte a nuestros torneos, ver imagenes del mismo,
+    comprar la mejor indumentaria de nuestra marca y más!">
+    <meta name="keywords" content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <title> Galería - FieldFut </title>
+    <title> Multimedia - FieldFut</title>
 </head>
 <body>
     <header>
