correciones generales en html y sass

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -122,9 +122,9 @@
           </div>
           
         </section> 
-        <button class="btn-prods">Comprar ahora</button>
-        <button class="btn-prods">Comprar ahora</button>
-        <button class="btn-prods">Comprar ahora</button>
+        <button class="btn-prods">Comprar Botines</button>
+        <button class="btn-prods">Comprar Pelota(s)</button>
+        <button class="btn-prods">Comprar Camiseta(s)</button>
 
         
 
