correccion de detalles

--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -24,8 +24,8 @@
                 <li><a href="../index.html" class="fa-solid fa-futbol"> Inicio </a></li>
                <li><a href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></li>
                <li><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></li>
-               <li><a href="./pages/torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
-                <li><a href="./pages/productos.html" class="fa-solid fa-shirt"> Productos</a></li>
+               <li><a href="./torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
+                <li><a href="./productos.html" class="fa-solid fa-shirt"> Productos</a></li>
            </ul>
          </nav>
      </header>
@@ -46,7 +46,7 @@
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1543326727-cf6c39e8f84c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Los Precios mas bajos</h3>
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Precios accesibles</h3>
                     </div>
                 </div>
             </div>
