--- a/pages/productos.html
+++ b/pages/productos.html
@@ -122,25 +122,26 @@
           </div>
           
         </section> 
-        <button class="btn-prods">Comprar Botines</button>
-        <button class="btn-prods">Comprar Pelota(s)</button>
-        <button class="btn-prods">Comprar Camiseta(s)</button>
+        <button class="btn-prods" target="_blank"> <a href="https://mercadolibre.com"></a> Comprar Botines</button>
+        <button class="btn-prods" target="_blank"> <a href="https://mercadolibre.com"></a> Comprar Pelota(s)</button>
+        <button class="btn-prods" target="_blank"> <a href="https://mercadolibre.com"></a> Comprar Camiseta(s)</button>
 
         
 
      </main>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
      <script src="https://kit.fontawesome.com/73f026269c.js" crossorigin="anonymous"></script>
+
+    <footer>
+      <p>¡Contactanos!</p>
+          <div class="items-footer">
+              <a href="https://instagram.com" class="fa-brands fa-instagram" target="_blank"></a> 
+              <a href="https://facebook.com" class="fa-brands fa-facebook-f" target="_blank"></a>
+              <a href="https://twitter.com" class="fa-brands fa-twitter" target="_blank"></a>
+              <a href="https://pinterest.com" class="fa-brands fa-pinterest" target="_blank"></a>
+          </div>
+    </footer> 
 </body>
-<footer>
-  <p>¡Contactanos!</p>
-      <div class="items-footer">
-           <a href="https://instagram.com" class="fa-brands fa-instagram" target="_blank"></a> 
-           <a href="https://facebook.com" class="fa-brands fa-facebook-f" target="_blank"></a>
-           <a href="https://twitter.com" class="fa-brands fa-twitter" target="_blank"></a>
-           <a href="https://pinterest.com" class="fa-brands fa-pinterest" target="_blank"></a>
-      </div>
-</footer> 
 
 </html>
 
