--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -1,76 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <meta name="description" content="Bienvenido a la Pagina Oficial de FieldFut en donde 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <meta
+      name="description"
+      content="Bienvenido a la Pagina Oficial de FieldFut en donde 
     vas a poder alquilar nuestras canchas, anotarte a nuestros torneos, ver imagenes del mismo,
-    comprar la mejor indumentaria de nuestra marca y más!">
-    <meta name="keywords" content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
-    <title> Multimedia - FieldFut</title>
-</head>
-<body>
+    comprar la mejor indumentaria de nuestra marca y más!"
+    />
+    <meta
+      name="keywords"
+      content="futbol, cancha, canchas, torneo, torneos, botines, camiseta, deporte, pelota, competicion"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../images/favicon.ico"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/main.css" />
+    <title>Multimedia - FieldFut</title>
+  </head>
+  <body>
     <header>
-        <h1 class="titulo"> FieldFut </h1> <i class="fa-solid fa-futbol"></i>
-        <nav class="barra-navegacion"> 
-           <ul class="menu-nav">
-                <li><a href="../index.html" class="fa-solid fa-futbol"> Inicio </a></li>
-               <li><a href="./multimedia.html" class="fa-solid fa-camera">  Galería</a></li>
-               <li><a href="./formulario.html" class="fa-sharp fa-solid fa-users">  Ser Parte</a></li>
-               <li><a href="./torneo.html" class="fa-solid fa-trophy"> Torneos</a></li> 
-                <li><a href="./productos.html" class="fa-solid fa-shirt"> Productos</a></li>
-           </ul>
-         </nav>
-     </header>
-<main>
-    <div class="container px-4 py-5" id="custom-cards">
+      <h1 class="titulo">FieldFut</h1>
+      <i class="fa-solid fa-futbol"></i>
+      <nav class="barra-navegacion">
+        <ul class="menu-nav">
+          <li>
+            <a href="../index.html" class="fa-solid fa-futbol"> Inicio </a>
+          </li>
+          <li>
+            <a href="./multimedia.html" class="fa-solid fa-camera"> Galería</a>
+          </li>
+          <li>
+            <a href="./formulario.html" class="fa-sharp fa-solid fa-users">
+              Ser Parte</a
+            >
+          </li>
+          <li>
+            <a href="./torneo.html" class="fa-solid fa-trophy"> Torneos</a>
+          </li>
+          <li>
+            <a href="./productos.html" class="fa-solid fa-shirt"> Productos</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="container px-4 py-5" id="custom-cards">
         <h2 class="pb-2 border-bottom">Galería de fotos</h2>
-        <p>Algunas de las mejores fotos que saca nuestra fotógrafa de los grandiosos jugadores que tenemos en nuestra liga!</p>
+        <p>
+          Algunas de las mejores fotos que saca nuestra fotógrafa de los
+          grandiosos jugadores que tenemos en nuestra liga!
+        </p>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+          <div class="col">
+            <div
+              class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1553778263-73a83bab9b0c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
+              "
+            >
+              <div
+                class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
+              >
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                  Futbol de Alto nivel
+                </h3>
+              </div>
+            </div>
+          </div>
 
-            <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1553778263-73a83bab9b0c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Futbol de Alto nivel</h3>
-                    </div>
-                </div>
+          <div class="col">
+            <div
+              class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1543326727-cf6c39e8f84c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
+              "
+            >
+              <div
+                class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
+              >
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                  Precios accesibles
+                </h3>
+              </div>
             </div>
-    
-            <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1543326727-cf6c39e8f84c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Precios accesibles</h3>
-                    </div>
-                </div>
+          </div>
+
+          <div class="col">
+            <div
+              class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+              style="
+                background-image: url('https://media.istockphoto.com/id/1088788804/es/foto/asia-adultos-j%C3%B3venes-jugando-f%C3%BAtbol.jpg?s=612x612&w=0&k=20&c=vM_vjldkskXq2JtMJRVNQub16RDr2MKvhKfRsY_Utz0=');
+              "
+            >
+              <div
+                class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
+              >
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                  Para todas las edades
+                </h3>
+              </div>
             </div>
-    
-            <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('https://media.istockphoto.com/id/1088788804/es/foto/asia-adultos-j%C3%B3venes-jugando-f%C3%BAtbol.jpg?s=612x612&w=0&k=20&c=vM_vjldkskXq2JtMJRVNQub16RDr2MKvhKfRsY_Utz0=');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Para todas las edades</h3>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </div>
-</main>
-<footer>
-    <p>¡Contactanos!</p>
-        <div class="items-footer">
-             <a href="instagram.com/" class="fa-brands fa-instagram" target="_blank"></a> 
-             <a href="facebook.com/" class="fa-brands fa-facebook-f" target="_blank"></a>
-             <a href="twitter.com/" class="fa-brands fa-twitter" target="_blank"></a>
-             <a href="pinterest.com/" class="fa-brands fa-pinterest" target="_blank"></a>
-        </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/73f026269c.js" crossorigin="anonymous"></script> 
-</body>
+      </div>
+    </main>
+    <footer>
+      <p>¡Contactanos!</p>
+      <div class="items-footer">
+        <a
+          href="instagram.com/"
+          class="fa-brands fa-instagram"
+          target="_blank"
+        ></a>
+        <a
+          href="facebook.com/"
+          class="fa-brands fa-facebook-f"
+          target="_blank"
+        ></a>
+        <a href="twitter.com/" class="fa-brands fa-twitter" target="_blank"></a>
+        <a
+          href="pinterest.com/"
+          class="fa-brands fa-pinterest"
+          target="_blank"
+        ></a>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/73f026269c.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
