--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -32,9 +32,9 @@
      <main>
         </head>
         <body>
-          <header class="banner">
+          <div class="banner">
             <h1>Torneo Inicial 2023</h1>
-          </header>
+          </div>
           <div class="card-container">
             <div class="card">
               <img src="https://images.unsplash.com/photo-1571080096581-53aefc318ac3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fHBhcnRpZG8lMjBkZSUyMGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="torneo-masculino-imagen">
