resolucion de problemas

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -61,7 +61,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <div class="row g-5">
         <div class="col-md-5 col-lg-4 order-md-last">
           <h1 class="titulo-torneos">Torneo Fútbol 5</h1>
