correcciones + inclusion de boton flotante

--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -132,6 +132,7 @@
           </div>
         </div>
       </div>
+      <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
     </main>
     <footer>
       <p class="text-center">¡Contactanos!</p>
