--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
           </div>
         </div>
       </div>
+      <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
     </main>
     <footer>
       <p class="text-center">¡Contactanos!</p>
