--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -199,7 +199,7 @@
 
               <div class="col-12">
                 <label for="email" class="form-label"
-                  >Email <span class="text-muted"> (Optional)</span>
+                  >Email <span class="text-muted"> (Opcional)</span>
                 </label>
                 <input
                   type="email"
