--- a/pages/productos.html
+++ b/pages/productos.html
@@ -242,7 +242,7 @@
                   <h2 class="card-title">Camisetas FieldFut</h2>
                   <p class="card-text">
                     Camisetas de todos los colores personalizadas como más te
-                    guste para que puedas usar con tu equipo en los torneos!
+                    guste para que puedas usar con tu equipo!
                   </p>
                   <button class="btn-prods" target="_blank">
                     <a href="https://mercadolibre.com"></a> Comprar Camiseta(s)
@@ -253,6 +253,7 @@
           </div>
         </div>
       </section>
+      <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
