--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -91,7 +91,7 @@
                 Viernes y Domingos. Horarios a coordinar. Diversas categorías.
               </p>
               <button class="card-button">
-                Inscribite <a href="./formulario.html"></a>
+                Inscribite <a href="formulario.html"></a>
               </button>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 Jueves y Sábados. Horarios a coordinar. Diversas categorías.
               </p>
               <button class="card-button">
-                Inscribite <a href="./formulario.html"></a>
+                Inscribite <a href="formulario.html"></a>
               </button>
             </div>
           </div>
@@ -121,7 +121,7 @@
                 Todos los días. Preguntar horarios. Todas las Edades.
               </p>
               <button class="card-button">
-                <a href="./formulario.html"></a> Reservá
+                <a href="formulario.html"></a> Reservá
               </button>
             </div>
           </div>
@@ -234,6 +234,8 @@
             </tr>
           </table>
         </section>
+
+        <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
 
         <script
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
