incorporacion de multimedia en galería

--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -38,7 +38,9 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <h1 class="navbar-brand titulo">FieldFut <i class="fa-solid fa-futbol"></i></h1> 
+          <h1 class="navbar-brand titulo">
+            FieldFut <i class="fa-solid fa-futbol"></i>
+          </h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -83,9 +85,7 @@
           <div class="col">
             <div
               class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1553778263-73a83bab9b0c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
-              "
+              style="background-image: url(../images/galeria3.jpg)"
             >
               <div
                 class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
@@ -100,9 +100,7 @@
           <div class="col">
             <div
               class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-              style="
-                background-image: url('https://images.unsplash.com/photo-1543326727-cf6c39e8f84c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
-              "
+              style="background-image: url(../images/galeria2.jpg)"
             >
               <div
                 class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
@@ -117,9 +115,7 @@
           <div class="col">
             <div
               class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-              style="
-                background-image: url('https://media.istockphoto.com/id/1088788804/es/foto/asia-adultos-j%C3%B3venes-jugando-f%C3%BAtbol.jpg?s=612x612&w=0&k=20&c=vM_vjldkskXq2JtMJRVNQub16RDr2MKvhKfRsY_Utz0=');
-              "
+              style="background-image: url(../images/galeria3.jpg)"
             >
               <div
                 class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
@@ -132,6 +128,68 @@
           </div>
         </div>
       </div>
+
+      <p class="text-center">¡Guardá las tuyas, se actualiza semanalmente!</p>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <img src="../images/f1.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">FutFEM</h5>
+                <p class="card-text">Partido 1</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="../images/f7.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Amistoso Mixto</h5>
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="../images/f10.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Amistoso 2</h5>
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="../images/f4.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Torneo Masculino</h5>
+                <p class="card-text">Partido 1</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="../images/f8.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Torneo Masculino</h5>
+                <p class="card-text">Partido 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="../images/f6.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Escuelita Infantil</h5>
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
     </main>
     <footer>
