--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 class="bd-placeholder-img card-img-top"
                 width="100%"
                 height="100%"
-                src="https://media.istockphoto.com/id/106531096/es/foto/jugador-de-f%C3%BAtbol.jpg?s=612x612&w=0&k=20&c=5486ysm5r-cTIdls3ZMynyAVNIjB-ayNiC-6sUlc-mw="
+                src="./images/jugador23.jpg"
               />
               <p>
                 Y además, podés inscribirte a nuestra escuelita de futbol
@@ -128,7 +128,7 @@
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
-                  src="https://images.unsplash.com/photo-1602432141202-e8b683524997?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                  src="./images/cancha 1.jpg"
                   alt="cancha-n1"
                 />
                 <div class="card-body">
@@ -145,7 +145,7 @@
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
-                  src="https://images.unsplash.com/photo-1487466365202-1afdb86c764e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FuY2hhJTIwZGUlMjBmJUMzJUJBdGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                  src="./images/cancha2.jpg"
                   alt="cancha-n2"
                 />
                 <div class="card-body">
@@ -162,7 +162,7 @@
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
-                  src="https://images.unsplash.com/photo-1532890198585-20730fc10d27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FuY2hhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                  src="./images/cancha3.jpg"
                   alt="cancha-n3"
                 />
                 <div class="card-body">
