--- a/pages/productos.html
+++ b/pages/productos.html
@@ -112,7 +112,7 @@
         <div class="carousel-inner">
           <div class="carousel-item">
             <img
-              src="../images/conjunto2.jpg"
+              src="../images/cj1.jpg"
               class="bd-placeholder-img"
               width="50%"
               height="100%"
@@ -123,15 +123,15 @@
             /><rect width="100%" height="100%" fill="#777"></rect>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Rojo y Verde</h1>
-                <p>Titular o suplente.</p>
+                <h1>Titular o Suplente</h1>
+                <p>Para que tu equipo destaque</p>
                 <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <img
-              src="../images/conjunto3.jpg"
+              src="../images/cj2.jpg"
               class="bd-placeholder-img"
               width="50%"
               height="100%"
@@ -142,15 +142,15 @@
             /><rect width="100%" height="100%" fill="#777"></rect>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Amarillo y Verde Claro</h1>
-                <p>Amplia gama de colores, pedí el tuyo!</p>
+                <h1>Fiel a tus Colores</h1>
+                <p>Amplia colorimetría, pedí tu casaca personalizada!</p>
                 <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item active">
             <img
-              src="../images/conjunto1.jpg"
+              src="../images/cj3.jpg"
               class="bd-placeholder-img"
               width="50%"
               height="100%"
@@ -161,8 +161,8 @@
             /><rect width="100%" height="100%" fill="#777"></rect>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Blanco y Negro.</h1>
-                <p>Edición Especial.</p>
+                <h1>Defendé tus Colores.</h1>
+                <p> La mejor calidad en camisetas</p>
                 <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
               </div>
             </div>
@@ -194,7 +194,7 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="https://media.istockphoto.com/id/1404635567/es/foto/primer-plano-de-un-par-de-botas-de-f%C3%BAtbol-de-cuero-negro-aisladas-sobre-fondo-blanco.jpg?b=1&s=170667a&w=0&k=20&c=7Kah17n8r2ISUG9SMgsqzgvmrphsc4HsuU1g5-q0WwA="
+                  src="../images/botines.jpg"
                   alt="botines-futbol-img"
                   class="card-img"
                 />
@@ -214,7 +214,7 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="https://images.unsplash.com/photo-1614632537190-23e4146777db?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVsb3RhJTIwZGUlMjBmdXRib2x8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                  src="../images/pelota.jpg"
                   alt="pelota-futbol-img"
                   class="card-img"
                 />
@@ -234,15 +234,14 @@
             <div class="col">
               <div class="card">
                 <img
-                  src="https://media.istockphoto.com/id/1199866137/es/foto/camisetas-coloridas-del-equipo-deportivo-que-cuelgan-en-los-rieles-de-la-ropa.jpg?b=1&amp;s=170667a&amp;w=0&amp;k=20&amp;c=L7TnX87Jd3vUTPthNlzuHdIvufpeo6kPZHbCCFEP_pQ="
+                  src="../images/camiseta.jpg"
                   alt="camiseta-futbol-img"
                   class="card-img"
                 />
                 <div class="card-content text-center">
                   <h2 class="card-title">Camisetas FieldFut</h2>
                   <p class="card-text">
-                    Camisetas de todos los colores personalizadas como más te
-                    guste para que puedas usar con tu equipo!
+                    Camisetas de todos los colores personalizadas como más te guste para que puedas usar con tu equipo en nuestros torneos!
                   </p>
                   <button class="btn-prods" target="_blank">
                     <a href="https://mercadolibre.com"></a> Comprar Camiseta(s)
