--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -39,7 +39,9 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <h1 class="navbar-brand titulo">FieldFut <i class="fa-solid fa-futbol"></i></h1> 
+          <h1 class="navbar-brand titulo">
+            FieldFut <i class="fa-solid fa-futbol"></i>
+          </h1>
           <button
             class="navbar-toggler"
             type="button"
