--- a/pages/productos.html
+++ b/pages/productos.html
@@ -162,7 +162,7 @@
             <div class="container">
               <div class="carousel-caption text-end">
                 <h1>Defendé tus Colores.</h1>
-                <p> La mejor calidad en camisetas</p>
+                <p>La mejor calidad en camisetas</p>
                 <p><a class="btn btn-lg btn-primary" href="#">Comprar</a></p>
               </div>
             </div>
@@ -192,17 +192,18 @@
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
-              <div class="card">
+              <div class="card card4">
                 <img
                   src="../images/botines.jpg"
-                  alt="botines-futbol-img"
+                  alt="foto de los botines blancos y negros que estan a la venta en nuestra tienda online"
                   class="card-img"
                 />
                 <div class="card-content text-center">
                   <h2 class="card-title">Botines</h2>
                   <p class="card-text">
-                    Edición limitada de FieldFut. Botines negros en todos los
-                    talles, con tapones y con suela para caucho. Pedilos!
+                    Edición limitada de FieldFut. Botines negros o blancos,
+                    disponibles en todos los talles, con tapones y con suela
+                    para caucho. Pedilos!
                   </p>
                   <button class="btn-prods" target="_blank">
                     <a href="https://mercadolibre.com"></a> Comprar Botines
@@ -212,10 +213,10 @@
             </div>
 
             <div class="col">
-              <div class="card">
+              <div class="card card4">
                 <img
                   src="../images/pelota.jpg"
-                  alt="pelota-futbol-img"
+                  alt="foto de la pelota edicion limitada de la UCL que estan a la venta en nuestra tienda online"
                   class="card-img"
                 />
                 <div class="card-content text-center">
@@ -232,16 +233,18 @@
             </div>
 
             <div class="col">
-              <div class="card">
+              <div class="card card4">
                 <img
                   src="../images/camiseta.jpg"
-                  alt="camiseta-futbol-img"
+                  alt="foto de las camisetas de distintos colores que estan a la venta en nuestra tienda online"
                   class="card-img"
                 />
                 <div class="card-content text-center">
                   <h2 class="card-title">Camisetas FieldFut</h2>
                   <p class="card-text">
-                    Camisetas de todos los colores personalizadas como más te guste para que puedas usar con tu equipo en nuestros torneos!
+                    Camisetas de todos los colores personalizadas como más te
+                    guste para que puedas usar con tu equipo en nuestros
+                    torneos!
                   </p>
                   <button class="btn-prods" target="_blank">
                     <a href="https://mercadolibre.com"></a> Comprar Camiseta(s)
@@ -263,6 +266,10 @@
       src="https://kit.fontawesome.com/73f026269c.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <footer>
       <p class="text-center">¡Contactanos!</p>
