--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" 
-      />
+      crossorigin="anonymous"
+    />
     <link
-       rel="stylesheet" 
-       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" 
-       integrity="sha512-2X0jKahxGxhFL7xcpY+Z8eOlvOQ2QH0JAZtKsCtLsWNY4lBr4l4zZmG/aJkrCfy+owIlrPYYo6bPIvVG8X7J1Q==" 
-       crossorigin="anonymous" 
-       referrerpolicy="no-referrer" 
-       />
-  
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
+      integrity="sha512-2X0jKahxGxhFL7xcpY+Z8eOlvOQ2QH0JAZtKsCtLsWNY4lBr4l4zZmG/aJkrCfy+owIlrPYYo6bPIvVG8X7J1Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./css/main.css" />
     <title>Inicio - FieldFut</title>
   </head>
 
   <body>
     <header>
-      
-      
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <h1 class="navbar-brand titulo">FieldFut <i class="fa-solid fa-futbol"></i></h1> 
+          <h1 class="navbar-brand titulo">
+            FieldFut <i class="fa-solid fa-futbol"></i>
+          </h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -77,7 +77,7 @@
             </ul>
           </div>
         </div>
-      </nav>      
+      </nav>
     </header>
     <main>
       <section class="py-5 text-center container">
@@ -117,7 +117,9 @@
               />
               <p>
                 Y además, podés inscribirte a nuestra escuelita de futbol
-                <a class="a-tarjeta-torneos" href="./formulario.html">acá</a>
+                <a class="a-tarjeta-torneos" href="./pages/formulario.html"
+                  >acá</a
+                >
               </p>
             </ul>
           </div>
@@ -129,7 +131,8 @@
                   width="100%"
                   height="225"
                   src="./images/cancha 1.jpg"
-                  alt="cancha-n1"
+                  alt="imagen de nuestra primera cancha de pasto sintético al aire libre en la zona de
+                  Belgrano."
                 />
                 <div class="card-body">
                   <p class="card-text">
@@ -146,7 +149,8 @@
                   width="100%"
                   height="225"
                   src="./images/cancha2.jpg"
-                  alt="cancha-n2"
+                  alt="imagen de nuestra segunda cancha situada sobre el barrio de Vte. López techada y de
+                  caucho"
                 />
                 <div class="card-body">
                   <p class="card-text">
@@ -163,7 +167,8 @@
                   width="100%"
                   height="225"
                   src="./images/cancha3.jpg"
-                  alt="cancha-n3"
+                  alt="imagen de nuestra cancha de 11 dividida en sectores, con gradas y
+                  tribunas"
                 />
                 <div class="card-body">
                   <p class="card-text">
@@ -208,11 +213,11 @@
       src="https://kit.fontawesome.com/73f026269c.js"
       crossorigin="anonymous"
     ></script>
-    <script 
-    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" 
-    integrity="sha512-0oAF+Hl8SGh2L1ztLgJw2M1q/Q+3ZZzhJgCfUatv6U5C+8krxJ0L7VfDZwLGfxZnNjN/YgMI+Tp/q1yL/1z81Q==" 
-    crossorigin="anonymous" 
-    referrerpolicy="no-referrer"
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"
+      integrity="sha512-0oAF+Hl8SGh2L1ztLgJw2M1q/Q+3ZZzhJgCfUatv6U5C+8krxJ0L7VfDZwLGfxZnNjN/YgMI+Tp/q1yL/1z81Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
   </body>
 </html>
