--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -134,56 +134,50 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <div class="card">
-              <img src="../images/f1.jpg" class="card-img-top" alt="..." />
+            <div class="card card2">
+              <img src="../images/f1.jpg" class="card-img-top" alt="imagenes de nuestro futbol femenino compitiendo" />
               <div class="card-body">
                 <h5 class="card-title">FutFEM</h5>
-                <p class="card-text">Partido 1</p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
-              <img src="../images/f7.jpg" class="card-img-top" alt="..." />
+            <div class="card card2">
+              <img src="../images/f7.jpg" class="card-img-top" alt="imagen de un amistoso mixto que se jugó esta semana" />
               <div class="card-body">
                 <h5 class="card-title">Amistoso Mixto</h5>
-                <p class="card-text"></p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
-              <img src="../images/f10.jpg" class="card-img-top" alt="..." />
+            <div class="card card2">
+              <img src="../images/f10.jpg" class="card-img-top" alt="foto de un amistoso de esta semana" />
               <div class="card-body">
                 <h5 class="card-title">Amistoso 2</h5>
-                <p class="card-text"></p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
-              <img src="../images/f4.jpg" class="card-img-top" alt="..." />
+            <div class="card card2">
+              <img src="../images/f4.jpg" class="card-img-top" alt="foto del segundo partido del torneo masculino" />
               <div class="card-body">
                 <h5 class="card-title">Torneo Masculino</h5>
-                <p class="card-text">Partido 1</p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
-              <img src="../images/f8.jpg" class="card-img-top" alt="..." />
+            <div class="card card2">
+              <img src="../images/f8.jpg" class="card-img-top" alt="foto del primer partido del torneo masculino" />
               <div class="card-body">
                 <h5 class="card-title">Torneo Masculino</h5>
-                <p class="card-text">Partido 2</p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
-              <img src="../images/f6.jpg" class="card-img-top" alt="..." />
+            <div class="card card2">
+              <img src="../images/f6.jpg" class="card-img-top" alt="niños jugando en nuestro club" />
               <div class="card-body">
                 <h5 class="card-title">Escuelita Infantil</h5>
-                <p class="card-text"></p>
               </div>
             </div>
           </div>
