--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -75,203 +75,199 @@
       </nav>
     </header>
     <main>
-      <body>
-        <div class="banner">
-          <h1>Torneo Inicial 2023</h1>
-        </div>
-        <div class="card-container">
-          <div class="card">
+      <div class="banner">
+        <h1>Torneo Inicial 2023</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card card3">
             <img
-              src="https://images.unsplash.com/photo-1571080096581-53aefc318ac3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fHBhcnRpZG8lMjBkZSUyMGZ1dGJvbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
-              alt="torneo-masculino-imagen"
+              class="card-img-top"
+              src="../images/tmasc.jpg"
+              alt="imagen que muestra 2 equipos comtitiendo en nuestro torneo masculino"
             />
-            <div class="card-content">
+            <div class="card-body">
               <h2 class="card-title">TORNEO MASCULINO</h2>
               <p class="card-text">
                 Viernes y Domingos. Horarios a coordinar. Diversas categorías.
               </p>
-              <button class="card-button">
-                Inscribite <a href="formulario.html"></a>
-              </button>
+              <a href="formulario.html" class="btn btn-primary">Inscribite</a>
             </div>
           </div>
-          <div class="card">
+        </div>
+        <div class="col-md-4">
+          <div class="card card3">
             <img
-              src="https://images.unsplash.com/photo-1532349206130-2daea437154d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-              alt="torneo-femenino-imagen"
+              class="card-img-top"
+              src="../images/tfem.jpg"
+              alt="imagen que muestra dos equipos compitiendo en el torneo femenino de FieldFut"
             />
-            <div class="card-content">
+            <div class="card-body">
               <h2 class="card-title">TORNEO FEMENINO</h2>
               <p class="card-text">
                 Jueves y Sábados. Horarios a coordinar. Diversas categorías.
               </p>
-              <button class="card-button">
-                Inscribite <a href="formulario.html"></a>
-              </button>
+              <a href="formulario.html" class="btn btn-primary">Inscribite</a>
             </div>
           </div>
-          <div class="card">
+        </div>
+        <div class="col-md-4">
+          <div class="card card3">
             <img
-              src="https://images.unsplash.com/photo-1587329310686-91414b8e3cb7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
-              alt="imagen-amistosos"
+              class="card-img-top"
+              src="../images/arco.jpg"
+              alt="foto de un gol en un partido amistoso en nuestras canchas"
             />
-            <div class="card-content">
-              <h2 class="card-title">RESERVAS PARA AMISTOSOS</h2>
+            <div class="card-body">
+              <h2 class="card-title">AMISTOSOS</h2>
               <p class="card-text">
-                Todos los días. Preguntar horarios. Todas las Edades.
+                Todos los días. Preguntar disponibilidad. Todas las Edades.
               </p>
-              <button class="card-button">
-                <a href="formulario.html"></a> Reservá
-              </button>
+              <a href="formulario.html" class="btn btn-primary">Reservá</a>
             </div>
           </div>
         </div>
+      </div>
+      <section class="container">
+        <h2 class="titulo-tabla">TABLA TORNEO MASCULINO</h2>
 
-        <section class="container">
-          <h2 class="titulo-tabla">TABLA TORNEO MASCULINO</h2>
+        <table>
+          <tr>
+            <td>-----</td>
+            <td>Equipo 1</td>
+            <td>Equipo 2</td>
+            <td>Equipo 3</td>
+            <td>Equipo 4</td>
+            <td>Equipo 5</td>
+          </tr>
+          <tr>
+            <td>Equipo 1</td>
+            <td>-----</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 2</td>
+            <td>2-8</td>
+            <td>-----</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 3</td>
+            <td>5-3</td>
+            <td>-----</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 4</td>
+            <td>4-6</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 5</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+        </table>
 
-          <table>
-            <tr>
-              <td>-----</td>
-              <td>Equipo 1</td>
-              <td>Equipo 2</td>
-              <td>Equipo 3</td>
-              <td>Equipo 4</td>
-              <td>Equipo 5</td>
-            </tr>
-            <tr>
-              <td>Equipo 1</td>
-              <td>-----</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 2</td>
-              <td>2-8</td>
-              <td>-----</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 3</td>
-              <td>5-3</td>
-              <td>-----</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 4</td>
-              <td>4-6</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 5</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-          </table>
+        <h2 class="titulo-tabla">TABLA TORNEO FEMENINO</h2>
 
-          <h2 class="titulo-tabla">TABLA TORNEO FEMENINO</h2>
+        <table>
+          <tr>
+            <td>-----</td>
+            <td>Equipo 1</td>
+            <td>Equipo 2</td>
+            <td>Equipo 3</td>
+            <td>Equipo 4</td>
+            <td>Equipo 5</td>
+          </tr>
+          <tr>
+            <td>Equipo 1</td>
+            <td>-----</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 2</td>
+            <td>2-8</td>
+            <td>-----</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 3</td>
+            <td>5-3</td>
+            <td>-----</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 4</td>
+            <td>4-6</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+          <tr>
+            <td>Equipo 5</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+            <td>por jugarse</td>
+          </tr>
+        </table>
+      </section>
 
-          <table>
-            <tr>
-              <td>-----</td>
-              <td>Equipo 1</td>
-              <td>Equipo 2</td>
-              <td>Equipo 3</td>
-              <td>Equipo 4</td>
-              <td>Equipo 5</td>
-            </tr>
-            <tr>
-              <td>Equipo 1</td>
-              <td>-----</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 2</td>
-              <td>2-8</td>
-              <td>-----</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 3</td>
-              <td>5-3</td>
-              <td>-----</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 4</td>
-              <td>4-6</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-            <tr>
-              <td>Equipo 5</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-              <td>por jugarse</td>
-            </tr>
-          </table>
-        </section>
+      <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
 
-        <a href="./pages/formulario.html" class="btn-float">Reservá Ahora</a>
-
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-          crossorigin="anonymous"
-        ></script>
-        <script
-          src="https://kit.fontawesome.com/73f026269c.js"
-          crossorigin="anonymous"
-        ></script>
-      </body>
-      <footer>
-        <p class="text-center">¡Contactanos!</p>
-        <div class="items-footer">
-          <a
-            href="instagram.com/"
-            class="fa-brands fa-instagram"
-            target="_blank"
-          ></a>
-          <a
-            href="facebook.com/"
-            class="fa-brands fa-facebook-f"
-            target="_blank"
-          ></a>
-          <a
-            href="twitter.com/"
-            class="fa-brands fa-twitter"
-            target="_blank"
-          ></a>
-          <a
-            href="pinterest.com/"
-            class="fa-brands fa-pinterest"
-            target="_blank"
-          ></a>
-        </div>
-      </footer>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://kit.fontawesome.com/73f026269c.js"
+        crossorigin="anonymous"
+      ></script>
     </main>
+    <footer>
+      <p class="text-center">¡Contactanos!</p>
+      <div class="items-footer">
+        <a
+          href="instagram.com/"
+          class="fa-brands fa-instagram"
+          target="_blank"
+        ></a>
+        <a
+          href="facebook.com/"
+          class="fa-brands fa-facebook-f"
+          target="_blank"
+        ></a>
+        <a href="twitter.com/" class="fa-brands fa-twitter" target="_blank"></a>
+        <a
+          href="pinterest.com/"
+          class="fa-brands fa-pinterest"
+          target="_blank"
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
